k8s/rand_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rand-deployment
  labels:
    app: rand
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rand-pod
  template:
    metadata:
      labels:
        app: rand-pod
    spec:
      containers:
      - name: random-pod
        image: 192.168.56.105:5000/random_number:prod
        imagePullPolicy: "Always"
        ports:
          - containerPort: 8000
        resources:
          requests:
            cpu: 400m
