k8s/sum_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sum-pod
  labels:
     app: sum-pod
spec:
  containers:
    - name: sum-pod
      image: 192.168.56.105:5000/sum_number:latest
      ports:
        - containerPort: 8080
