k8s/cache_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-pod
  labels:
    run: cache-pod
spec:
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: cache-pod
