k8s/random_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: random-pod
  labels:
    run: random-pod
spec:
  ports:
  - port: 8000
    protocol: TCP
  selector:
    run: random-pod
