k8s/sum_balancer.yaml
kind: Service
apiVersion: v1
metadata:
  name: sum-balancer
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: sum-pod
  type: LoadBalancer
