k8s/sum_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sum-service
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: sum-pod
