k8s/sum_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sum-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sum-service
            port:
              number: 8000
